fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,9 @@ textarea {
  h1, h2, h3, h4, h5, h6{
   font-weight: 700;
  }
+ html{
+    overflow: hidden;
+ }
 body, html {
     height: 100%;
     overflow-x:hidden;
